--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/Nathipg/ControleDeSalas.git"
   },
-  "author": "Panorame Group",
+  "author": "Panorama Group",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Nathipg/ControleDeSalas/issues"
@@ -18,9 +18,13 @@
   "homepage": "https://github.com/Nathipg/ControleDeSalas#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.1",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-load": "^1.1.16",
+    "express-validator": "^5.2.0",
+    "htmlparser": "^1.7.7",
+    "jquery": "^3.3.1",
     "mysql": "^2.15.0",
     "socket.io": "^2.1.1"
   }
